# anteml

./: LICENSE  Pipfile  mini-spec.md  readme.md  setup.cfg
anteml/: __init__.py  attributes.py  elements.py  entities.py  errors.py  parser.py
demo/: colors.py  elements.py  greeter_anteml.py  greeter_colorama.py
