[metadata]
name = AnTeML
version = 0.1.4
author = Florian Breit
author_email = florian@florian.me.uk
description = A stack-based HTML-like mini-language for encoding text with ANSI X3.64 Control Sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thatfloflo/anteml
project_urls =
    Bug Tracker = https://github.com/thatfloflo/anteml/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: User Interfaces
    Topic :: Terminals
    Intended Audience :: Developers

[options]
packages = anteml
python_requires = >=3.10
